--- a/qa/deepsea/tasks.yaml
+++ b/qa/deepsea/tasks.yaml
@@ -1,6 +1,6 @@
 tasks:
 - install:
-    install_packages: false
+    install_ceph_packages: false
 - deepsea:
     repo: https://github.com/SUSE/DeepSea.git
     branch: SES5
