--- a/qa/suites/deepsea/tier2/openattic/tasks.yaml
+++ b/qa/suites/deepsea/tier2/openattic/tasks.yaml
@@ -1,10 +1,1 @@
-tasks:
-- install:
-    install_packages: false
-- exec:
-    master.a:
-      - "zypper search --details lrbd"
-- deepsea:
-    repo: https://github.com/SUSE/DeepSea.git
-    branch: SES5
-    exec: []
+../../../../deepsea/tasks.yaml
