--- a/qa/suites/deepsea/tier4/upgrade/3-test-phase.yaml
+++ b/qa/suites/deepsea/tier4/upgrade/3-test-phase.yaml
@@ -1,9 +1,31 @@
 tasks:
         - exec:
                 client.salt_master:
+                        - 'ceph --version'
                         - 'ceph -s'
         - deepsea.validation:
+                deepsea_install_method:
+                        package:
+        - deepsea.repository:
+                client.salt_master:
+        - exec:
+                client.salt_master:
+                        - 'zypper --non-interactive --no-gpg-checks rm gvfs-backends sle-sdk-release-POOL || true'
+        - exec:
+                client.salt_master:
+                        - 'zypper --non-interactive --no-gpg-checks dup --auto-agree-with-licenses --replacefiles'
+        - deepsea.reboot:
+                client.salt_master:
+        - deepsea.repository:
+                all:
+        - exec:
+                all:
+                        - 'zypper --non-interactive --no-gpg-checks rm gvfs-backends sle-sdk-release-POOL || true'
         - deepsea.state:
                 state: ceph.updates.salt
         - deepsea.orch:
                 state_orch: ceph.maintenance.upgrade
+        - exec:
+                client.salt_master:
+                        - 'ceph --version'
+                        - 'ceph -s'
